# EDA_UFMV

./: .gitignore  .test-config.json  AUTHORS.md  CHANGELOG.md  CLAUDE.md  DOCUMENTATION_MIGRATION.md  LICENSE  MANIFEST.in  README.md  ROOT_CLEANUP_SUMMARY.md  SECURITY.md  TEST_AGENT_GUIDE.md  pyproject.toml  pytest.ini  requirements.txt  run_api_tests.py  run_rgm_tests.py  setup.py
.github/workflows/: lint.yml  publish.yml  test.yml
coverage/: README.md  __init__.py
coverage/api/: __init__.py
coverage/core/: __init__.py  covergroup.py  coverpoint.py
coverage/database/: __init__.py  memory_db.py
coverage/formatters/: __init__.py  html_report.py  json_report.py  ucis_report.py
coverage/utils/: __init__.py  exceptions.py
docs/: IMPLEMENTATION_PLAN.md  README.md
docs/concepts/: coverage-deep-dive.md  index.md  randomization-deep-dive.md  rgm-deep-dive.md  sv-to-python-mapping.md
docs/development/: ARCHITECTURE.md  CONTRIBUTING.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_GUIDELINES.md  DOCUMENTATION_REFRESH_PROCESS.md  ROADMAP.md  TEST_AGENT_GUIDE.md  TEST_GUIDE.md
docs/development/history/: CLEANUP_SUMMARY.md  REFACTORING_SUMMARY.md
docs/development/migration/: migration-v0.3.md
docs/guides/: README.md  migration-v0.3.md  randomization.md  sv-to-python-guide.md
docs/guides/coverage/: systemverilog-migration.md
docs/guides/rgm/: README.md  SSH_ADAPTER_GUIDE.md
docs/legacy/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  README.md  SEED_CONTROL.md
docs/plans/: 2026-03-01-advanced-testing-design.md  2026-03-01-advanced-testing-implementation.md  2026-03-01-api-usability-implementation.md  2026-03-01-api-usability-redesign.md  2026-03-01-scenario-based-documentation-design.md  2026-03-01-scenario-based-documentation-implementation.md  2026-03-01-sv-to-python-converter-design.md  2026-03-01-sv-to-python-implementation.md
docs/product/: API_REFERENCE.md  PRODUCT_MANUAL.md  RGM_GUIDE.md  USER_GUIDE.md  comparison.md  features.md  overview.md  use-cases.md
docs/reference/: index.md  randomization.md  sv-converter.md
docs/reference/coverage/: migration.md
docs/reference/rgm/: SSH_ADAPTER_GUIDE.md
docs/scenarios/: 01-generate-random.md  02-collect-coverage.md  03-create-regmodel.md  04-migrate-from-sv.md  05-automate-conversion.md  06-complete-workflow.md  index.md
docs/test/: advanced_testing_guide.md
docs/user/: README.md
examples/: seed_demo.py  simple_test.py
examples/basic/: packet_generator.py  solve_inequalities.py
examples/coverage/: README.md  advanced_coverage.py  basic_coverage.py
examples/enhanced_rand/: README.md
examples/parser/: README.md
examples/rand/: README.md  packet_generator.py  seed_demo.py  simple_test.py  solve_inequalities.py  test_six_variables.py
examples/rgm/: README.md  basic_rgm_example.py  code_generator_example.py
rgm/: __init__.py
rgm/access/: __init__.py  backdoor.py  base.py  frontdoor.py
rgm/adapters/: __init__.py  apb_adapter.py  axi_adapter.py  base.py  ssh_adapter.py  uart_adapter.py
rgm/api/: __init__.py  decorators.py
rgm/core/: __init__.py  field.py  register.py  register_block.py  register_map.py
rgm/generators/: __init__.py  base.py  c_header_generator.py  factory.py  python_generator.py  verilog_generator.py
rgm/utils/: exceptions.py
scripts/: README.md  run_all_tests.py  run_stress_test.py  run_test_complex_protocols.py
sv_randomizer/: __init__.py
sv_randomizer/api/: __init__.py  annotations.py  decorators.py  dsl.py  expression.py
sv_randomizer/constraints/: __init__.py  base.py  builders.py  expressions.py  parser.py  tokenizer.py
sv_randomizer/core/: __init__.py  randomizable.py  seeding.py  variables.py
sv_randomizer/coverage/: __init__.py
sv_randomizer/coverage/api/: decorators.py
sv_randomizer/coverage/core/: __init__.py  bin.py  cross.py
sv_randomizer/coverage/database/: __init__.py  base.py  factory.py  file_db.py
sv_randomizer/coverage/formatters/: __init__.py  base.py  factory.py  html_report.py  json_report.py  ucis_report.py
sv_randomizer/formatters/: __init__.py  base.py  verilog.py
sv_randomizer/solvers/: __init__.py  backend_interface.py  pure_python.py  solver_factory.py  z3_backend.py
sv_randomizer/utils/: __init__.py  exceptions.py
sv_to_python/: __init__.py  __main__.py  cli.py  errors.py  extractor.py  generator.py  ir.py  parser.py
sv_to_python/templates/: module.py.j2  task.py.j2
tests/: conftest.py  test_fixes.py  test_string_constraints.py
tests/fixtures/: simple_tasks.sv  uvm_tasks.sv
tests/integration/: README.md  test_integration.py
tests/integration/test_cross_module/: __init__.py  test_randomizer_coverage_integration.py  test_rgm_coverage_integration.py
tests/integration/test_end_to_end/: __init__.py  test_verification_flow.py
tests/legacy/: README.md  debug_test.py  test_constraints.py  test_seeding.py  test_variables.py  working_test.py
tests/performance/: README.md  test_benchmarks.py  test_performance.py
tests/scripts/: README.md  test_constraints_verify.py  test_install_verify.py  test_venv_demo.py  test_venv_demo_simple.py
tests/test_api/: conftest.py  test_annotations.py  test_ast_converter.py  test_ast_converter_advanced.py  test_complex_constraints.py  test_complex_protocols.py  test_complex_stress.py  test_constraint_decorator.py  test_integration_basic.py  test_metaclass.py  test_performance_benchmarks.py  test_performance_stress.py
tests/test_api/helpers/: __init__.py  baseline_data.json  performance_utils.py  scenario_generators.py
tests/test_coverage/: __init__.py  test_bins.py  test_covergroup.py  test_coverpoint.py  test_cross_and_reports.py  test_database.py
tests/test_parser/: __init__.py  test_lexer.py  test_parser.py
tests/test_rgm/: conftest.py  pytest.ini  test_access.py  test_adapters.py  test_field.py  test_generators.py  test_register.py  test_register_block.py
tests/test_sv_to_python/: test_cli.py  test_end_to_end.py  test_extractor.py  test_generator.py  test_ir.py  test_parser.py
tests/unit/: README.md
tools/: README.md
(+8 files in other folders)
