[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eda-ufmv"
version = "0.3.0"
description = "Universal Verification Framework for FPGA/Prototype Verification"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "EDA_UFVM Team", email = "support@eda-ufmv.org"}
]
maintainers = [
    {name = "EDA_UFVM Team", email = "support@eda-ufmv.org"}
]
keywords = [
    "verification",
    "fpga",
    "prototype",
    "systemverilog",
    "uvm",
    "randomization",
    "coverage",
    "register-model",
    "eda",
    "testing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
# Core testing framework
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "isort>=5.0.0",
]
# Enhanced testing capabilities
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=3.0",         # Parallel test execution
    "pytest-benchmark>=4.0",     # Performance benchmarking
    "pytest-mock>=3.10",         # Mock support
    "pytest-timeout>=2.1",       # Test timeout control
    "pytest-randomly>=3.15",     # Randomized test order
]
# All testing dependencies
testing = [
    "eda-ufmv[test]",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "isort>=5.0.0",
]
z3 = [
    "z3-solver>=4.12.0",
]
stat = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]
ssh = [
    "paramiko>=3.0.0",
]
all = [
    "eda-ufmv[dev,z3,stat,ssh]",
]

[project.urls]
Homepage = "https://github.com/EdaerCoser/EDA_UFVM"
Documentation = "https://github.com/EdaerCoser/EDA_UFVM/blob/main/docs/README.md"
Repository = "https://github.com/EdaerCoser/EDA_UFVM"
"Bug Tracker" = "https://github.com/EdaerCoser/EDA_UFVM/issues"
Changelog = "https://github.com/EdaerCoser/EDA_UFVM/blob/main/CHANGELOG.md"

[project.scripts]
sv-rand = "sv_randomizer.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = [
    "sv_randomizer*",
    "coverage*",
    "rgm*",
]
exclude = [
    "tests*",
    "docs*",
    "examples*",
    ".github*",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/",
    "examples/",
    "docs/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-p no:qt -v --tb=short --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "performance: 性能测试",
    "benchmark: 基准测试",
    "regression: 回归测试",
    "P0: P0级关键测试",
    "P1: P1级重要测试",
    "P2: P2级增强测试",
    "slow: 慢速测试",
    "error_handling: 异常处理测试",
    "boundary: 边界情况测试",
    "cross_module: 跨模块集成测试",
    "end_to_end: 端到端工作流测试",
]

[tool.coverage.run]
source = ["sv_randomizer", "coverage", "rgm"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstract",
]
